changed global to top 10 leadboard

--- a/views/index.html
+++ b/views/index.html
@@ -107,7 +107,7 @@
             <p>{{ error_message }}</p>
         </div>
         <div v-if="currStage !== 5">
-            <button v-on:click="showTopScores">Global Leaderboard</button>
+            <button v-on:click="showTopScores">Top 10 Leaderboard</button>
         </div>
     </div>
 </body>
