cleared scores on reset

--- a/views/index.html
+++ b/views/index.html
@@ -86,7 +86,7 @@
                 </tbody>
             </table>
             <button v-on:click="showScores" :disabled="finished">Refresh</button>
-            <button v-on:click="playAgain" :disabled="!finished">Play Again</button>
+            <button v-on:click="playAgain" :disabled="!finished">New Game</button>
         </div>
         <div v-if="currStage === 4">
             <table class="table">
