--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
   integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Fantasy Sports Platform - Build a Team of Historical Olympic Athletes </title>
 </head>
 
 <body>
